--- a/WebContent/ben.css
+++ b/WebContent/ben.css
@@ -1,2 +1,3 @@
 @CHARSET "UTF-8";
-.footer {position:absolute;width:99%;height:100px;bottom:0px;text-align:center;}
+.footer {position:absolute;width:99%;top:550px;height:100px;text-align:center;}
+.align-center {margin-left:auto;margin-right:auto;margin-top:200px;width:250px;}
