--- a/WebContent/ben.css
+++ b/WebContent/ben.css
@@ -1,3 +1,5 @@
 @CHARSET "UTF-8";
-.footer {position:absolute;width:99%;top:550px;height:100px;text-align:center;}
+.center-text-info, .footer {position:absolute;width:99%;text-align:center;}
+.center-text-info {top:250px;}
+.footer {top:550px;height:100px;}
 .align-center {margin-left:auto;margin-right:auto;margin-top:200px;width:250px;}
